--- a/templates/main.html
+++ b/templates/main.html
@@ -23,6 +23,10 @@
             <input type="submit" value="Ethical Test for Employee">
         </form>
 
+        <form action="/investor_test" method="POST">
+            <input type="submit" value="Investor Test">
+        </form>
+
         <form action="/FAQ" method="POST">
             <input type="submit" value="FAQ">
         </form>
