--- a/templates/main.html
+++ b/templates/main.html
@@ -38,6 +38,10 @@
         <form action="/deleteLog" method="POST">
             <input type="submit" value="Delete User Log">
         </form>
+
+        <form action="/telegram" method="POST">
+            <input type="submit" value="Start Telegram">
+        </form>
     </div>
 </body>
 </html>
