--- a/templates/telegram.html
+++ b/templates/telegram.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Telegram Bot Interaction</h1>
 
-        <a href="https://web.telegram.org/k/#@an6802_wqy_2024t3_bot" target="_blank"> <!-- own url -->
+        <a href="https://web.telegram.org/k/#@PugLover_bot" target="_blank">
             <button class="btn">Start Telegram</button>
         </a>
 
